@@ -97,10 +97,8 @@ final class CMS_Content_Block
         }
         if( !$rec['id'] ) $rec['id'] = str_replace(' ','_',$rec['name']);
 
-        /*
         // check for duplicate
         if( isset(self::$_contentBlocks[$rec['name']]) ) throw new CmsEditContentException('Duplicate content block: '.$rec['name']);
-        */
 
         // set priority
         if( empty($rec['priority']) || !$rec['priority'] ) {
@@ -139,6 +137,9 @@ final class CMS_Content_Block
             if( !self::$_priority ) self::$_priority = 100;
             $rec['priority'] = self::$_priority++;
         }
+
+        // check for duplicate
+        if( isset(self::$_contentBlocks[$rec['name']]) ) throw new CmsEditContentException('Duplicate content block: '.$rec['name']);
 
         // set priority
         if( empty($rec['priority']) || $rec['priority'] == 0 ) {
@@ -185,6 +186,9 @@ final class CMS_Content_Block
             if( !self::$_priority ) self::$_priority = 100;
             $rec['priority'] = self::$_priority++;
         }
+
+        // check for duplicate
+        if( isset(self::$_contentBlocks[$rec['name']]) ) throw new CmsEditContentException('Duplicate content block: '.$rec['name']);
 
         // set priority
         if( empty($rec['priority']) || !$rec['priority'] ) {
